--- a/Views/Web.config
+++ b/Views/Web.config
@@ -39,5 +39,7 @@
         <add assembly="System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" culture="vi-VN" uiCulture="vi-VN" />
   </system.web>
+	
 </configuration>
