--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" culture="vi-VN" uiCulture="vi-VN" />
+		<authentication mode="Forms">
+			<forms loginUrl="~/Account/Login" timeout="3600"></forms>
+		</authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -68,4 +72,5 @@
   <connectionStrings>
     <add name="MyStoreEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=localhost;initial catalog=MyStore;    integrated security=True;trustservercertificate=True;    MultipleActiveResultSets=True;    App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+
 </configuration>
