--- a/Web.config
+++ b/Web.config
@@ -8,20 +8,29 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  <!-- Merged appSettings section -->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- PayPal Configuration -->
+    <add key="PayPalClientId" value="ASYsVYmcdcWieHX6tyS3IkzFogigx7H-0XC6ncCu-xWp9AwLqnS_JxRkGMi6JN8d2j5KyuRnI3zUB8ll" />
+    <add key="PayPalClientSecret" value="EFQzrt9HCwXydBYs_-TKYyhCYW2AtwLoAWg7uH9VMBxBdg-YRWvtLgYhs6a8j0TvQqsfaLW2wVhVYmVc" />
+    <add key="PayPalMode" value="sandbox" />
   </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" culture="vi-VN" uiCulture="vi-VN" />
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/Login" timeout="3600"></forms>
-		</authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="3600"></forms>
+    </authentication>
   </system.web>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -58,19 +67,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <connectionStrings>
-    <add name="MyStoreEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=localhost;initial catalog=MyStore;    integrated security=True;trustservercertificate=True;    MultipleActiveResultSets=True;    App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyStoreEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=MyStore;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-
 </configuration>
